--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -25,8 +25,9 @@
         <EditText
             android:id="@+id/description_of_the_note"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="@string/write"
+            android:gravity="top|left"
             android:inputType="textMultiLine" />
     </LinearLayout>
 
