--- a/app/src/main/res/layout/notes_list_fragment.xml
+++ b/app/src/main/res/layout/notes_list_fragment.xml
@@ -12,6 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/create_note" />
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
 
 
 </LinearLayout>
