--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -4,41 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200"
+    android:background="@drawable/note_phone"
     android:orientation="vertical"
-    tools:showIn=".MainActivity">
+    android:padding="@dimen/default_padding"
+    tools:context=".NoteFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/subject_of_the_note"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/note_theme"
-            android:singleLine="true" />
-
-
-        <EditText
-            android:id="@+id/description_of_the_note"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/write"
-            android:gravity="top|left"
-            android:inputType="textMultiLine" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/save_note"
+    <EditText
+        android:id="@+id/theme_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save_note"
+        android:hint="@string/theme"
+        android:inputType="text" />
 
-        app:cornerRadius="20dp"
+    <EditText
+        android:id="@+id/description_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/description_note"
+        android:inputType="text" />
 
-        />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/save_button"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="@string/save_button"
+        app:backgroundTint="#A386E3"
+        app:cornerRadius="@dimen/corner_radius_button" />
+
 
 </LinearLayout>
