8дз.Сделал по уроку.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="corner_radius_button">30dp</dimen>
     <dimen name="layout_width">0dp</dimen>
     <dimen name="layout_height">0dp</dimen>
+    <dimen name="note_item_subject_text_size">28sp</dimen>
+    <dimen name="note_item_phone_text_size">20sp</dimen>
 </resources>
