--- a/app/src/main/res/navigation/navigation_note.xml
+++ b/app/src/main/res/navigation/navigation_note.xml
@@ -16,7 +16,7 @@
         tools:layout="@layout/note_fragment" />
     <fragment
         android:id="@+id/settings"
-        android:name="com.example.notesapp.Settings"
+        android:name="com.example.notesapp.Info"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
